<resources>
    <string name="app_name">Fuego</string>

    <!-- Google Signin -->
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Chargement</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <string name="sign_out">Se Déconnecter</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Main Menu -->
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="agenda">Agenda</string>
    <string name="annales">Annales</string>
    <string name="connexion">Connexion</string>
    <string name="rooms">Salles libres</string>
    <string name="evenements">Évènements</string>
    <string name="jobs">Jobs</string>
    <string name="settings">Paramètres</string>
    <string name="les_clubs">Les Clubs</string>
    <string name="rapport_de_bug">Signaler un bug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Annales -->
    <string name="annales_client_id">2_4r1x05vo8oiswwgwk8okcgwo8s0o40c4cskkok8wwcs8k4woc4</string>
    <string name="annales_secret">25yyrbggzi9wg0wgskgc004wko8w0k0oowcg8kcsckgog80wkw</string>

    <!-- Menu Agenda -->
    <string name="actualiser">Actualiser</string>
    <string name="today">Aujourd\'hui</string>
    <string name="day_view">Jour</string>
    <string name="three_day">3 Jours</string>
    <string name="week_view">Semaine</string>

    <!-- Permission Manager -->
    <string name="permissionDeniedMessage"><![CDATA[Si vous refusez ces permissions, l\'utilisation de l\'application sera dégradée voir impossible \n\nMerci d\'activer les permissions dans [Paramètres] > [Autorisations] \n\nLes demandes d\'accès aux appels et aux contacts servent uniquement à pouvoir cliquer sur un numéro de téléphone afin de l\'appeler]]></string>
    <string name="close">Fermer</string>
    <string name="no_event_today">Pas d\'évènements aujourd\'hui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fairpay">FairPay</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="about_text">À propos de l\'application</string>
    <string name="bde">BDE</string>
    <string name="mon_espace">Mon Espace</string>
    <string name="bde_website">bde.esiee.fr</string>
    <string name="administration">Administration</string>
    <string name="founded_objects">Objets trouvés</string>

    <string-array name="administrator">
        <item>wallerand.delevacq@edu.esiee.fr</item>
    </string-array>

    <string-array name="topics">
        <item>dev</item>
        <item>news</item>
        <item>alpha</item>
        <item>beta</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
