<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="BDE">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_room_white_24dp"
                    android:title="@string/rooms" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_event_white_24dp"
                    android:title="@string/evenements" />
            </group>
        </menu>
    </item>
    <item android:title="Mon Espace">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_date_range_white_24dp"
                    android:title="@string/agenda" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_book_white_24dp"
                    android:title="@string/annales" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_account_circle_white_24dp"
                    android:title="@string/connexion" />

            </group>
        </menu>
    </item>

    <item android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
